[build-system]
requires = ["setuptools>=75.6.0", "setuptools_scm[toml]>=5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlists"
description = "Python implementation of Uniswaps' tokenlists"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Ben Hauser", email = "ben@hauser.id" },
    { name = "ApeWorX LTD", email = "admin@apeworx.io" },
]
license = "Apache-2.0"
urls = { Repository = "https://github.com/ApeWorX/py-tokenlists" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["ethereum"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7,<9",
    "pydantic>=2.5.2,<3",
    "pyyaml>=6.0,<7",
    "requests>=2.28.1,<3",
]

[project.entry-points.console_scripts]
tokenlists = "tokenlists._cli:cli"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-xdist",
    "pytest-cov",
    "hypothesis>=6.148,<7",
    "PyGithub>=1.54,<2",
    "hypothesis-jsonschema>=0.23,<1",
]
lint = [
    "ruff",
    "mypy>=1.16,<2",
    "types-requests",
    "types-setuptools",
    "mdformat>=0.7.19",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=0.4.1",
    "mdformat-pyproject>=0.0.2",
]
docs = [
    "sphinx-ape",
]
dev = [
    "commitizen",
    "pre-commit",
    "pytest-watch",
    "IPython",
    "ipdb",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]

[tool.setuptools]
packages = ["tokenlists"]
include-package-data = true

[tool.setuptools_scm]
write_to = "tokenlists/version.py"

[tool.mypy]
exclude = "build/"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
